--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/latency-metrics.py",
+      "src": "api/latency.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/api/latency-metrics",
-      "dest": "api/latency-metrics.py"
+      "src": "/api/latency",
+      "dest": "api/latency.py"
     }
   ]
 }
